Added : Discord RPC / About me
Discord RPC Operationnal
About me Operationnal

--- a/index.html
+++ b/index.html
@@ -30,5 +30,18 @@
                 <a href="#"><i class="fa fa-fw fa-phone"></i> Contact</a>
             </nav>
         </header>
+            <div>
+                <h1 class="main">📌 | Activity :</h1>
+            </div>
+            <div class="discordrpc">
+            <img src="https://lanyard.cnrad.dev/api/807133944332025916" alt="">            
+            </div>
+            <div class="aboutme">
+                <h1>🔎 | About me :</h1>
+                <p class="aboutmep">🔭 I’m currently working on : a SCP:SL Marketplace ; Discord.py Bot</p>
+                <p class="aboutmep">🌱 I’m currently learning : Python, Javascript, C#</p>
+                <p class="aboutmep">⚡ Other : Supervisor of "Oméga Facility Developement"</p>
+            </div>
+            
     </body>
 </html>
