--- a/index.html
+++ b/index.html
@@ -26,22 +26,28 @@
             <nav class="navbar">
                 <a href="./index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="./tech.html"><i class="fa fa-fw fa-wrench"></i> Tech</a>
-                <a href="#"><i class="fa fa-fw fa-github"></i> Github</a>
-                <a href="#"><i class="fa fa-fw fa-phone"></i> Contact</a>
+                <a href="https://github.com/RLLanonymous/RLLanonymous/blob/main/README.md"><i class="fa fa-fw fa-github"></i> Github</a>
             </nav>
         </header>
-            <div>
-                <h1 class="main">📌 | Activity :</h1>
+        <div>
+                <h1 class="main">🌐 | Activity :</h1>
             </div>
             <div class="discordrpc">
             <img src="https://lanyard.cnrad.dev/api/807133944332025916" alt="">            
+            <div align="center" class="center">
+                <a href="https://open.spotify.com/user/p7se86jf5s032om8c22r4xdax">
+                  <img src="https://spotify-recently-played-readme.vercel.app/api?user=p7se86jf5s032om8c22r4xdax&count=5&unique=false" alt="Spotify recently played"  />   
+            <div>
+                <!--Buttons-->
+                <div class="center">
+                <a href="https://discord.gg/Sqj2fe4xNT" target="_blank">
+                    <img src="https://img.shields.io/badge/Discord-7289da?style=for-the-badge&logo=Discord&logoColor=white&label=My Server" target="_blank" />
+                    <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" target="_blank">
+                        <img src="https://img.shields.io/badge/Stackoverflow-e88409?style=for-the-badge&logo=stackoverflow&logoColor=white&label=My Profil" target="_blank" />
+                        <a href="mailto:ethanweirich31@gmail.com">
+                            <img src="https://img.shields.io/badge/Gmail-333333?style=for-the-badge&logo=gmail&logoColor=red&label=Contact Me" />
+                          </a>
             </div>
-            <div class="aboutme">
-                <h1>🔎 | About me :</h1>
-                <p class="aboutmep">🔭 I’m currently working on : a SCP:SL Marketplace ; Discord.py Bot</p>
-                <p class="aboutmep">🌱 I’m currently learning : Python, Javascript, C#</p>
-                <p class="aboutmep">⚡ Other : Supervisor of "Oméga Facility Developement"</p>
-            </div>
-            
+        </div>
     </body>
 </html>
