--- a/index.html
+++ b/index.html
@@ -6,47 +6,26 @@
         <!--Style.css base file-->
         <link rel="stylesheet" href="style.css">
         <!--Font awesome icons .css tool-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!--Material icons google .css tool-->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <!--Animate .css tool-->       
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <!--AOS .css tool-->
-        <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-        <!--Boxicon-->
-        <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
         <!--Fav icon-->
-        <link rel="icon" href="./img/">
+        <link rel="icon" href="./img/favicon.jpg">
     </head>
     <body>
-        <header class="header">
-            <a href="#" class="logo">Lanonymous</a>
-
-            <nav class="navbar">
-                <a href="./index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-                <a href="./tech.html"><i class="fa fa-fw fa-wrench"></i> Tech</a>
-                <a href="https://github.com/RLLanonymous/RLLanonymous/blob/main/README.md"><i class="fa fa-fw fa-github"></i> Github</a>
-            </nav>
-        </header>
-        <div>
-                <h1 class="main">🌐 | Activity :</h1>
-            </div>
-            <div class="discordrpc">
-            <img src="https://lanyard.cnrad.dev/api/807133944332025916" alt="">            
-            <div align="center" class="center">
-                <a href="https://open.spotify.com/user/p7se86jf5s032om8c22r4xdax">
-                  <img src="https://spotify-recently-played-readme.vercel.app/api?user=p7se86jf5s032om8c22r4xdax&count=5&unique=false" alt="Spotify recently played"  />   
-            <div>
-                <!--Buttons-->
-                <div class="center">
-                <a href="https://discord.gg/Sqj2fe4xNT" target="_blank">
-                    <img src="https://img.shields.io/badge/Discord-7289da?style=for-the-badge&logo=Discord&logoColor=white&label=My Server" target="_blank" />
-                    <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" target="_blank">
-                        <img src="https://img.shields.io/badge/Stackoverflow-e88409?style=for-the-badge&logo=stackoverflow&logoColor=white&label=My Profil" target="_blank" />
-                        <a href="mailto:ethanweirich31@gmail.com">
-                            <img src="https://img.shields.io/badge/Gmail-333333?style=for-the-badge&logo=gmail&logoColor=red&label=Contact Me" />
-                          </a>
+            <!--Discord Rich Presence-->
+            <div class="card">
+                <h1 align="center">
+                    <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=4000&lines=Hello+👋;+I'm+Lanonymous!;Salut+👋;+Je+suis+Lanonymous!" />
+                </h1>
+                <img src="https://lanyard.cnrad.dev/api/807133944332025916">
+            <!-- Réseaux sociaux -->
+            <div class="social-buttons">
+                <a href="https://github.com/RLLanonymous" class="fab fa-github" title="GitHub"></a>
+                <a href="https://steamcommunity.com/profiles/76561199179737617/" class="fab fa-steam" title="Steam"></a>
+                <a href="https://discord.com/users/807133944332025916" class="fab fa-discord" title="Discord"></a>
+                <a href="mailto:ethanweirich31@gmail.com" class="fas fa-envelope" title="Email"></a>
+                <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" class="fab fa-stack-overflow" title="StackOverflow"></a>
             </div>
         </div>
     </body>
