Update : Home | Lanonymous => Lanonymous

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Home | Lanonymous</title>
+        <title>Lanonymous</title>
         <!--Style.css base file-->
         <link rel="stylesheet" href="style.css">
         <!--Font awesome icons .css tool-->
