--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Lanonymous</title>
+        <title>Hub | Lanonymous</title>
         <!--Style.css base file-->
         <link rel="stylesheet" href="style.css">
         <!--Font awesome icons .css tool-->
@@ -27,6 +27,7 @@
                 <a href="mailto:ethanweirich31@gmail.com" class="fas fa-envelope" title="Email"></a>
                 <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" class="fab fa-stack-overflow" title="StackOverflow"></a>
             </div>
+            <a href="./skills.html"><button class="button"><i class="fas fa-code"></i> Skills</button></a>
         </div>
     </body>
 </html>
