--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="mailto:ethanweirich31@gmail.com" class="fas fa-envelope" title="Email"></a>
                 <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" class="fab fa-stack-overflow" title="StackOverflow"></a>
             </div>
-            <a href="./skills.html"><button class="button"><i class="fas fa-code"></i> Skills</button></a>
+            <a href="./skills"><button class="button"><i class="fas fa-code"></i> Skills</button></a>
         </div>
     </body>
 </html>
