--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
             <div align="center">
                 <img src="https://skillicons.dev/icons?i=python,js,cs,html,css"/><br>
             </div>
-        <a href="./index.html"><button class="button"><i class="fas fa-home"></i></i> Hub</button></a>
+        <a href="./index"><button class="button"><i class="fas fa-home"></i></i> Hub</button></a>
     </div>
 </body>
 </html>
