--- a/skills.html
+++ b/skills.html
@@ -20,13 +20,13 @@
             <h1 align="center"> 💻 | Softwares/Websites </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=windows,vscode,visualstudio,pycharm,unity,git,github,stackoverflow,discord,gmail"/><br>
+                <img src="https://skillicons.dev/icons?i=windows,vscode,visualstudio,pycharm,unity,git,github,stackoverflow,discord,gmail" alt="Softwares Icons"/><br>
             </div>
             
             <h1 align="center"> 💡 | Languages </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=python,js,cs,html,css"/><br>
+                <img src="https://skillicons.dev/icons?i=python,js,cs,html,css" alt="Languages Icons"/><br>
             </div>
         <a href="./index"><button class="button"><i class="fas fa-home"></i></i> Hub</button></a>
     </div>
