--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 align="center">
                     <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=4000&lines=Hello+👋;+I'm+Lanonymous!;Salut+👋;+Je+suis+Lanonymous!" />
                 </h1>
-                <img src="https://lanyard.cnrad.dev/api/807133944332025916">
+                <img src="https://lanyard.kyrie25.me/api/807133944332025916?decoration=false&animationDuration=8s&waveColor=#bcbcbc&waveSpotifyColor=6aa84f&imgStyle=square">
             <!-- Réseaux sociaux -->
             <div class="social-buttons">
                 <a href="https://github.com/RLLanonymous" class="fab fa-github" title="GitHub"></a>
