--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
             <h1 align="center"> 💻 | Softwares/Websites </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=windows,vscode,visualstudio,pycharm,unity,git,github,stackoverflow,discord,gmail" alt="Softwares Icons"/><br>
+                <img src="https://skillicons.dev/icons?i=windows,vscode,visualstudio,unity,blender,git,github,discord"/><br>
             </div>
             
             <h1 align="center"> 💡 | Languages </h1>
