Added : Java/Intellij/Pycharm Icons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <link rel="icon" href="./img/favicon.jpg">
     </head>
     <body>
+
             <!--Discord Rich Presence-->
-            <div class="card">
+        <div class="card">
                 <h1 align="center">
                     <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=4000&lines=Hello+👋;+I'm+Lanonymous!;Salut+👋;+Je+suis+Lanonymous!" />
                 </h1>
@@ -28,6 +29,7 @@
                 <a href="https://stackoverflow.com/users/25453561/lanonymous?tab=profile" class="fab fa-stack-overflow" title="StackOverflow"></a>
             </div>
             <a href="./skills"><button class="button"><i class="fas fa-code"></i> Skills</button></a>
+            <a href="./marketplace"><button class="button"><i class="fas fa-shopping-basket"></i> Market</button></a>
         </div>
     </body>
 </html>
