--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
             <h1 align="center"> 💡 | Languages </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=java,python,cs,dotnet,html,css" alt="Languages Icons"/><br>
+                <img src="https://skillicons.dev/icons?i=js,python,cs,dotnet,html,css" alt="Languages Icons"/><br>
             </div>
         <a href="./index"><button class="button"><i class="fas fa-home"></i></i> Hub</button></a>
     </div>
