:arrow_up: Update Icons+Marketplace

--- a/skills.html
+++ b/skills.html
@@ -17,16 +17,16 @@
             <h1 align="center">
                 <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=4000&lines=My+skills+and+softwares.;Mes+compétences+et+logiciels." />
             </h1>
-            <h1 align="center"> 💻 | Softwares/Websites </h1>
+            <h1 align="center"> 💻 | Text Editor/IDEs </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=windows,vscode,visualstudio,pycharm,idea,unity,blender,git,github,discord"/><br>
+                <img src="https://skillicons.dev/icons?i=vscode,visualstudio,pycharm,rider,webstorm"/><br>
             </div>
             
             <h1 align="center"> 💡 | Languages </h1>
             <br/>
             <div align="center">
-                <img src="https://skillicons.dev/icons?i=js,python,cs,dotnet,html,css" alt="Languages Icons"/><br>
+                <img src="https://skillicons.dev/icons?i=html,css,js,vue,markdown,python,cs,dotnet" alt="Languages Icons"/><br>
             </div>
         <a href="./index"><button class="button"><i class="fas fa-home"></i></i> Hub</button></a>
     </div>
