--- a/marketplace.html
+++ b/marketplace.html
@@ -17,6 +17,7 @@
             <h1 align="center">
                 <img src="https://readme-typing-svg.herokuapp.com/?font=Righteous&size=35&center=true&vCenter=true&width=500&height=70&duration=4000&lines=My+Shop.;Mon Magasin."/>
             </h1>
-            <h1>Work in progress...</h1>
+            <br>
+            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'U7U114FQBO');kofiwidget2.draw();</script> 
     </body>
 </html>
